--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,8 +30,8 @@ android {
 
 dependencies {
     implementation 'com.android.volley:volley:1.2.1'
-    implementation 'com.github.bumptech.glide:glide:4.15.1' // Use the latest Glide version
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.15.1'
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.15.1' // For annotation processing
     implementation libs.appcompat
     implementation libs.material
     implementation libs.activity
