--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,8 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.15.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.15.1'
     implementation 'com.google.android.material:material:1.12.0'
+    implementation 'com.github.mhiew:android-pdf-viewer:3.2.0-beta.3'
+
     implementation libs.appcompat
     implementation libs.material
     implementation libs.activity
