--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,14 +23,19 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
+    }
+    buildFeatures {
+        viewBinding true
     }
 }
 
 dependencies {
     implementation 'com.android.volley:volley:1.2.1'
     implementation 'com.github.bumptech.glide:glide:4.15.1'
+    implementation libs.navigation.fragment
+    implementation libs.navigation.ui
     annotationProcessor 'com.github.bumptech.glide:compiler:4.15.1'
     implementation 'com.google.android.material:material:1.12.0'
     implementation 'com.github.mhiew:android-pdf-viewer:3.2.0-beta.3'
