--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,6 +39,9 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.15.1'
     implementation 'com.google.android.material:material:1.12.0'
     implementation 'com.github.mhiew:android-pdf-viewer:3.2.0-beta.3'
+    implementation 'com.squareup.okhttp3:okhttp:4.11.0'
+    implementation 'commons-io:commons-io:2.11.0'
+
 
     implementation libs.appcompat
     implementation libs.material
