--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,7 +41,7 @@ dependencies {
     implementation 'com.github.mhiew:android-pdf-viewer:3.2.0-beta.3'
     implementation 'com.squareup.okhttp3:okhttp:4.11.0'
     implementation 'commons-io:commons-io:2.11.0'
-
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
     implementation libs.appcompat
     implementation libs.material
