--- a/settings.gradle
+++ b/settings.gradle
@@ -17,6 +17,7 @@ dependencyResolutionManagement {
         google()
         mavenCentral()
         gradlePluginPortal()
+        maven { url 'https://jitpack.io' } //Add this line in your settings.gradle
     }
 }
 
