--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.15.1'
     implementation libs.navigation.fragment
     implementation libs.navigation.ui
+    implementation libs.media
     annotationProcessor 'com.github.bumptech.glide:compiler:4.15.1'
     implementation 'com.google.android.material:material:1.12.0'
     implementation 'com.github.mhiew:android-pdf-viewer:3.2.0-beta.3'
