--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,16 +13,13 @@
         android:appCategory="audio"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_library"
+        android:icon="@mipmap/ic_launcher_lib"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_library_round"
+        android:roundIcon="@mipmap/ic_launcher_lib_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidELibrary"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
-        <meta-data
-            android:name="com.google.android.gms.car.application"
-            android:resource="@xml/automotive_app_desc" />
 
         <activity
             android:name=".StaffActivity"
